<resources>
    <string name="app_name">calendartest</string>
    <string name="text_day">日</string>
    <string name="text_month">月</string>

    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>

    <string name="text_today">今天</string>
    <string name="text_tomorrow">明天</string>
    <string name="text_year">年</string>
    <string name="text_cancel">取消</string>
    <string name="text_share_to">分享至：</string>
</resources>
