<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_f5f5f5">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_cancel"
            android:textColor="@color/font_666666"
            android:textSize="14sp"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="13dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_left"
                android:layout_width="25dp"
                android:scaleType="center"
                android:layout_height="25dp"
                android:src="@mipmap/left_score_card" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/font_333333"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_right"
                android:layout_width="25dp"
                android:scaleType="center"
                android:layout_height="25dp"
                android:src="@mipmap/right_score_card" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_week_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:background="@color/color_f5f5f5"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:paddingTop="13dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/blue_55c0ea"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="@color/font_666666"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="@color/font_666666"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/font_666666"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="@color/font_666666"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@color/font_666666"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="@color/blue_55c0ea"
            android:textSize="10sp" />


    </LinearLayout>


    <GridView
        android:id="@+id/gridView"
        android:layout_below="@id/ll_week_title"
        android:layout_width="match_parent"
        android:layout_height="318dp"
        android:numColumns="7"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:listSelector="@android:color/transparent"/>


</RelativeLayout>
